[package]
name = "fwetch"
version = "0.1.0"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Brought from NodeJs to rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/fwetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
