[package]
name = "fwetch"
version = "0.1.0"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Brought from NodeJs to rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/fwetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = [ "json" ]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1"}
actix-web = {version = "4", optional = true}

[features]
default = ["essential"]
actix = ["dep:actix-web"]
essential = []
all = ["actix", "essential"]